fixed alignment in about pics

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,12 @@
 /* Custom bootstrap variables must be set or imported *before* bootstrap. */
 
 @import "bootstrap";
+
+
+html {
+    font-size: 16px;
+}
+
+#header-text {
+    color: black;
+}
