--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,8 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+
 #header-pic {
   background-image: url("band1.jpg");
+  opacity: 0.5;
   
 }
+
+#header-text {
+    color: black;
+}
+
+
 
